--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,14 @@ doc = "kmvid.tool.doc:run"
 
 [tool.ruff.lint]
 ignore = ["E731"]
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "src",
+    "test",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+]
